<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noteTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:text="@string/edit_note"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="32dp"
                android:layout_height="35dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_delete_24" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alice"
            android:text="@string/title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/alice"
            android:hint="@string/title_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alice"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/alice"
            android:gravity="top|start"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:lines="10"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/errorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alice"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alice"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progressBar"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/black" />

    </LinearLayout>


</ScrollView>